fix some errors

--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,7 @@
     <h1>Resources</h1>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="berries/index.html">Berries</a></li>
         <li><a href="resources.html">Resources</a></li>
       </ul>
@@ -19,15 +19,15 @@
   <main role="main">
     <section>
       <strong>Find out more about berries!</strong>
-        <ul>
-          <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Grape">https://en.wikipedia.org/wiki/Grape</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Redcurrant">https://en.wikipedia.org/wiki/Redcurrant</a></li>
-          <li><a href="https://en.wikipedia.org/wiki/Banana">https://en.wikipedia.org/wiki/Banana</a></li>
-          <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
-          <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
-        </ul>
+      <ul>
+        <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Grape">https://en.wikipedia.org/wiki/Grape</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Redcurrant">https://en.wikipedia.org/wiki/Redcurrant</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Banana">https://en.wikipedia.org/wiki/Banana</a></li>
+        <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
+        <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
+      </ul>
     </section>
   </main>
   <footer role="contentinfo">
