fixed the errorrs

--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header role="banner">
-    <h1>Resources</h1>
+    <strong>Resources</strong>
     <nav role="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -18,7 +18,7 @@
   </header>
   <main role="main">
     <section>
-      <strong>Find out more about berries!</strong>
+      <h1>Find out more about berries!</h1>
       <ul>
         <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
