--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <header role="banner">
-    <strong>Berries</strong>
+    <h1>Berries</h1>
     <nav role="navigation">
       <ul>
-        <li><a href="index.html">home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="berries/index.html">Berries</a></li>
         <li><a href="resources.html">Resources</a></li>
       </ul>
@@ -18,7 +18,7 @@
   </header>
   <main role="main">
     <section>
-      <h1>Berries, berries, oh my!</h1>
+      <h2>Berries, berries, oh my!</h2>
       <p>In everyday English, “berry” is a term for any small edible fruit. These “berries” are usually juicy, round, brightly coloured, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
       <ul>
         <li><a href="berries/blueberries.html">Blueberries</a></li>
