--- a/berries/bananas.html
+++ b/berries/bananas.html
@@ -17,11 +17,9 @@
     </nav>
   </header>
   <main role="main">
-    <section>
-      <h1>Bananas</h1>
-      <img src="../images/bananas.jpg" alt="bananas">
-      <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
-    </section>
+    <h1>Bananas</h1>
+    <img src="../images/bananas.jpg" alt="this is yellow bananas">
+    <p>Not commonly considered a berry, bananas are botanically a berry: a simple fruit with seeds and pulp produced from a single flower.</p>
   </main>
   <footer role="contentinfo">
     <p>© Berries</p>
