--- a/berries/blueberries.html
+++ b/berries/blueberries.html
@@ -17,11 +17,9 @@
     </nav>
   </header>
   <main role="main">
-    <section>
-      <h1>Blueberries</h1>
-      <img src="../images/blueberries.jpg" alt="blueberries">
-      <p> Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
-    </section>
+    <h1>Blueberries</h1>
+    <img src="../images/blueberries.jpg" alt="this is blue blueberries">
+    <p> Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
   <footer role="contentinfo">
     <p>© Berries</p>
