--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -17,11 +17,9 @@
     </nav>
   </header>
   <main role="main">
-    <section>
-      <h1>Grapes</h1>
-      <img src="../images/grapes.jpg" alt="grapes">
-      <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
-    </section>
+    <h1>Grapes</h1>
+    <img src="../images/grapes.jpg" alt="this is red grapes">
+    <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
   <footer role="contentinfo">
     <p>© Berries</p>
