--- a/berries/red-currants.html
+++ b/berries/red-currants.html
@@ -17,11 +17,9 @@
     </nav>
   </header>
   <main role="main">
-    <section>
-      <h1>Red currants</h1>
-      <img src="../images/red-currants.jpg" alt="red-currants">
-      <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
-    </section>
+    <h1>Red currants</h1>
+    <img src="../images/red-currants.jpg" alt="this is red-currants">
+    <p>With maturity, the tart flavour of redcurrant fruit is slightly greater than its blackcurrant relative, but with the same approximate sweetness.</p>
   </main>
   <footer role="contentinfo">
     <p>© Berries</p>
