--- a/resources.html
+++ b/resources.html
@@ -17,21 +17,18 @@
     </nav>
   </header>
   <main role="main">
-    <section>
-      <h1>Find out more about berries!</h1>
-      <ul>
-        <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Grape">https://en.wikipedia.org/wiki/Grape</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Redcurrant">https://en.wikipedia.org/wiki/Redcurrant</a></li>
-        <li><a href="https://en.wikipedia.org/wiki/Banana">https://en.wikipedia.org/wiki/Banana</a></li>
-        <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
-        <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
-      </ul>
-    </section>
-  </main>
-  <footer role="contentinfo">
+    <h1>Find out more about berries!</h1>
     <p>© Berries</p>
-  </footer>
+    <ul>
+      <li><a href="https://en.wikipedia.org/wiki/Berry">https://en.wikipedia.org/wiki/Berry</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Blueberry">https://en.wikipedia.org/wiki/Blueberry</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Grape">https://en.wikipedia.org/wiki/Grape</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Redcurrant">https://en.wikipedia.org/wiki/Redcurrant</a></li>
+      <li><a href="https://en.wikipedia.org/wiki/Banana">https://en.wikipedia.org/wiki/Banana</a></li>
+      <li><a href="https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html">https://www.chapters.indigo.ca/en-ca/books/whats-wrong-with-my-fruit/9781604693584-item.html</a></li>
+      <li><a href="https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html">https://www.chapters.indigo.ca/en-ca/books/fresh-from-the-garden-an/9780816698394-item.html</a></li>
+    </ul>
+  </main>
+  <footer role="contentinfo"></footer>
 </body>
 </html>
