--- a/berries/grapes.html
+++ b/berries/grapes.html
@@ -18,7 +18,7 @@
   </header>
   <main role="main">
     <h1>Grapes</h1>
-    <img src="../images/grapes.jpg" alt="this is red grapes">
+    <img src="../images/grapes.jpg" alt="this is a great grapes">
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
   <footer role="contentinfo">
